# game_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/meshes/Sponza/: sponza.mtl
assets/meshes/normaltest/gobber/: GoblinX.mtl
assets/meshes/normaltest/gobber/Textures/: GoblinEye.dds
cmake/: require_env_var.cmake
config/: settings.ini
scripts/: copy_assets.py  count-src  format
shaders/: CMakeLists.txt  ps_lit.hlsl  ps_lit_mask.hlsl  ps_phong.hlsl  ps_test.hlsl  shader_ops.hlsl  vs_phong.hlsl  vs_test.hlsl
src/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  CommandRegister.cpp  CommandRegister.h  Game.cpp  Game.h  ImGuiManager.cpp  ImGuiManager.h  PCH.h  WinMain.cpp  Window.cpp  Window.h  logger.cpp  logger.h  main.cpp
src/containers/: EnumSet.h
src/error/: Win32Exception.cpp
src/gfx/: CMakeLists.txt  DXGIInfoManager.cpp  DXGIInfoManager.h  GFXException.cpp  GFXException.h  Graphics.cpp  Graphics.h
src/gfx/bind/: Bindable.cpp  Bindable.h  ConstantBuffers.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  PixelShader.cpp  PixelShader.h  Topology.cpp  Topology.h  TransformCBuffer.cpp  TransformCBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h  bind.h
src/gfx/draw/: Box.cpp  Box.h  Drawable.cpp  Drawable.h  DrawableBase.h
src/gfx/include/gfx/: DrawableFactory.h  GFXFactory.h  Graphics.h  IDrawable.h  IGraphics.h  IModel.h  IPointLight.h
src/gfx/include/gfx/bindings/: Bindings.h  ConstantBuffers.h  IndexBuffer.h  InputLayout.h  PixelShader.h  Texture.h  Topology.h  TransformCBuffer.h  VertexBuffer.h  VertexShader.h
src/gfx/include/gfx/draw/: Drawable.h  DrawableBase.h  Geometry.h
src/gfx/include/gfx/draw/geom/: Box.h  Cone.h  Cube.h  Melon.h  Plane.h  Prism.h  Pyramid.h  Sphere.h
src/gfx/src/: DX11Graphics.cpp  DX11Graphics.h  DXException.cpp  DXException.h  DXGIInfoManager.cpp  GFXException.cpp  GFXFactory.cpp  Graphics.cpp  Graphics.h  PCH.h
src/gfx/src/bindings/: Bindable.cpp  Bindable.h  Bindings.h  Blender.cpp  Blender.h  ConstantBufferEx.cpp  ConstantBufferEx.h  ConstantBuffers.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  PixelShader.cpp  PixelShader.h  Rasterizer.cpp  Rasterizer.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformCBuffer.cpp  TransformCBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h
src/gfx/src/dcbuffer/: DynamicConstant.cpp  DynamicConstant.h  LayoutCodex.cpp  LayoutCodex.h
src/gfx/src/draw/: Box.cpp  Box.h  Codex.cpp  Codex.h  Drawable.cpp  Drawable.h  DrawableBase.h  DrawableFactory.cpp  Geometry.h  Material.cpp  Material.h  Melon.cpp  Melon.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pyramid.cpp  Pyramid.h  Sheet.cpp  Sheet.h  SkinnedBox.cpp  SkinnedBox.h  SolidSphere.cpp  SolidSphere.h
src/gfx/src/draw/geom/: Box.cpp  Cone.h  Cube.h  Melon.cpp  Melon.h  Plane.h  Prism.h  Pyramid.cpp  Sphere.h
src/gfx/src/geom/: Cone.h  Cube.h  Geometry.h  IndexedTriangleList.h  Plane.h  Prism.h  Sphere.h  Vertex.cpp  Vertex.h
src/gfx/src/lighting/: PointLight.cpp  PointLight.h
src/gfx/src/postprocess/: FSR.cpp  FSR.h
src/scene/: CMakeLists.txt
src/scene/include/scene/: Camera.h
src/scene/src/: Camera.cpp
src/util/: CMakeLists.txt  EnumSet.h  RingQueue.h  Timer.cpp  Timer.h  math.h
src/util/include/util/: Bencher.h  CommandContext.h  CommandRegister.h  RingQueue.h  Settings.h  logger.h  math.h  str.h
src/util/include/util/events/: Consumer.h  Producer.h
src/util/src/: Bencher.cpp  CommandRegister.cpp  Settings.cpp  logger.cpp  str.cpp
src/window/: CMakeLists.txt  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h
src/window/include/window/: Keyboard.h  Mouse.h  Win32Exception.h  Window.h
src/window/src/: Keyboard.cpp  Mouse.cpp  Win32Exception.cpp  Window.cpp
src/window/win32/: CMakeLists.txt  WinMain.cpp  Window.cpp  Window.h
